test/integration/bad/tuples/bad-index4.stan
transformed data {
  tuple(real, real) pair = (3.14, 34.2);
  pair.3 = 6.28;
}
